--- a/PyTorch.ipynb
+++ b/PyTorch.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "16yGg1QPTnODGecxdSs9y5vn8I0wU30MQ",
-      "authorship_tag": "ABX9TyOhO70pd/rSr+cgMC/0N5hh",
+      "authorship_tag": "ABX9TyM6D+piiUraDftDm3KTUe2S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "metadata": {
         "id": "R8_88khZK9w4"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -191,6 +191,183 @@
           },
           "metadata": {},
           "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch_4 = torch.arange(10)\n",
+        "my_torch_4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pIqHGdEqTb0t",
+        "outputId": "c0a36660-6878-42dc-f9bc-1d59db7bc2b1"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Reshape and View\n",
+        "my_torch_4.reshape(2,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GwyX9jjuTtMf",
+        "outputId": "baacec5b-40dc-45a0-c689-4441face85f2"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Reshape without knowing\n",
+        "my_torch_5 = torch.arange(10)\n",
+        "my_torch_5 = my_torch_5.reshape(2,-1)\n",
+        "my_torch_5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TMKdwiH4T9zs",
+        "outputId": "8c8f1da7-8f82-44d3-ef32-b187524a89a8"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch_6 = torch.arange(10)\n",
+        "my_torch_7 = my_torch_6.view(2,5)\n",
+        "my_torch_7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9lpaGhHoVRCC",
+        "outputId": "88b70441-2169-4281-a7dd-547d3ef990d0"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#slices\n",
+        "my_torch_8 = torch.arange(10)\n",
+        "my_torch_8= my_torch_8.reshape(5,2)\n",
+        "my_torch_8"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DXC7zgNWWW7t",
+        "outputId": "af754406-5c3a-44cf-b811-c9530088e62a"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1],\n",
+              "        [2, 3],\n",
+              "        [4, 5],\n",
+              "        [6, 7],\n",
+              "        [8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch_8[:,1:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HGazv020XGP3",
+        "outputId": "f1d046da-49c0-4723-86c3-dcf02b1a8a21"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1],\n",
+              "        [3],\n",
+              "        [5],\n",
+              "        [7],\n",
+              "        [9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
         }
       ]
     }
